# LabMath3

./: CMakeLists.txt  Lab3. Andrianov.docx  README.md  main.cpp
